--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,7 @@ NODE_ENV=development
 
 # JWT Secret for authentication
 JWT_SECRET=your_jwt_secret_key_here
+JWT_EXPIRES_IN=1d
 
 # API Keys (replace with your actual keys)
 HELIUS_API_KEY=your_helius_api_key_here
@@ -15,6 +16,16 @@ HELIUS_API_BASE=https://api.helius.xyz/v0
 HELIUS_RPC_URL=https://mainnet.helius-rpc.com
 BIRDEYE_API_BASE=https://public-api.birdeye.so
 JUPITER_API_BASE=https://price.jup.ag/v4
+
+# Agent service configuration
+AGENT_SERVICE_URL=http://localhost:8000
+
+# Database configuration
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=sellyoursolv2
+DB_USER=postgres
+DB_PASSWORD=postgres
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:5173
